<resources>
    <string name="app_name">FavDish</string>

    <string name="random_dish">Random Dish</string>
    <string name="all_dishes">All Dishes</string>
    <string name="favorite">Favorite Dishes</string>

    <string name="splash_screen_title">Fav Dish</string>

    <string name="action_add_dish">Add Dish</string>

    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="lbl_add_dish">ADD DISH</string>

    <string name="title_select_image">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>

    <string name="label_no_dishes_added_yet">No dishes added yet!!!</string>

    <string name="title_dish_details">Dish Details</string>

    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>

    <string name="msg_added_to_favorites">You have added the dish to your favorites.</string>
    <string name="msg_removed_from_favorite">You have removed the dish from your favorites.</string>

    <string name="label_no_favorite_dishes_added_yet">No favorite dishes added yet!!!</string>

    <string name="action_edit_dish">EDIT DISH</string>
    <string name="action_delete_dish">DELETE DISH</string>

    <string name="title_add_dish">Add Dish</string>
    <string name="title_edit_dish">Edit Dish</string>

    <string name="lbl_update_dish">UPDATE DISH</string>

    <string name="title_delete_dish">Delete Dish</string>
    <string name="msg_delete_dish_dialog">Are you sure you wants to delete %1$s.</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>

    <string name="action_filter_dishes">Filter Dishes</string>
    <string name="title_select_item_to_filter">SELECT ITEM TO FILTER</string>

    <string name="msg_already_added_to_favorites">You have already added the dish to your favorites.</string>


    <string name="please_wait">Please Wait&#8230;</string>
    <string name="dish_details_label">Dish Details</string>
    <string name="action_share_dish">Share dish</string>
    <string name="notification_title">Checkout New Dish Recipes</string>
    <string name="notification_subtitle">Tap for More details</string>
    <string name="click_here_to_add_image">Click Here To Add Image</string>
    <string name="msg_dish_added_to_db">Dish Added To Database</string>

</resources>