<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.AddUpdateDishActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <Button
            android:id="@+id/btn_add_dish"
            android:text="@string/lbl_add_dish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_cooking_direction"
            style="@style/button_style" />

        <RelativeLayout
            android:id="@+id/fl_select_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dish_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_add_dish_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/image_contentDescription"
                android:padding="@dimen/_16sdp"
                app:srcCompat="@drawable/ic_add_a_photo" />

            <TextView
                android:id="@+id/add_image_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_add_dish_image"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/grey_900"
                android:gravity="center_horizontal"
                android:text="@string/click_here_to_add_image" />

            <ImageView
                android:id="@+id/iv_edit_dish_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/image_contentDescription"
                android:padding="@dimen/_16sdp"
                app:srcCompat="@drawable/ic_vector_edit"
                android:visibility="invisible"
                tools:visibility="visible"/>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_type"
            style="@style/text_input_style"
            android:hint="@string/lbl_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_type"
                style="@style/text_input_layout_edit_text"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category"
            style="@style/text_input_style"
            android:hint="@string/lbl_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_category"
                style="@style/text_input_layout_edit_text"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ingredient"
            style="@style/text_input_style_ingredient"
            android:hint="@string/lbl_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ingredient"
                android:inputType="textMultiLine"
                style="@style/text_input_layout_edit_text_ingredient" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cooking_time"
            style="@style/text_input_style"
            android:hint="@string/lbl_cooking_time_in_minutes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_ingredient">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dish_cooking_time"
                style="@style/text_input_layout_edit_text"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cooking_direction"
            style="@style/text_input_style"
            android:hint="@string/lbl_direction_to_cook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_cooking_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dish_cooking_direction"
                style="@style/text_input_layout_edit_text"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/text_input_style"
            android:hint="@string/lbl_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_select_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                style="@style/text_input_layout_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>